# AMIML-SLR

./: CITATION.cff  LICENSE  README.md  index.html  pyproject.toml
data/: DB.xlsx  README.md
docs/: index.html
notebooks/: ARXIV_WEB_SCRAPING.ipynb  Data_analysis.ipynb  README.md
ris/: README.md
ris/duplicates/: 296_1.ris  296_2.ris
ris/eligibility/: 30.ris
ris/identification/: 619.ris
ris/included/: 70.ris
ris/screening/: 364.ris
src/amiml/: README.md  __init__.py  analysis.py  arxiv.py  export.py  loader.py  metrics.py  plots.py  taxonomy.py  themes.py
