[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "amiml"
version = "1.0.0"
description = "Analysis toolkit for the AMIML systematic review of post-hoc model-agnostic interpretability methods."
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["wordcloud", "seaborn", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]
